# auto-task

./: .gitignore  CODE_OF_CONDUCT.MD  LICENSE  README.md  SECURITY.MD  pyproject.toml  requirements.txt
auto_task/: cli.py  config.py  runner.py  scheduler_engine.py  utils.py  watcher_engine.py
examples/: hello_task.py
